appId: co.openvine.app.staging
---
#TC to delete the account data for a user
# given the user is logged in in the app,
# opens the settings menu and remove the keys from the device
#Steps:
# 1. Open the settings page
# 2. Tap on the delete modal: Validate Delete Account and Data is displayed
# 3. Tap on cancel button: Validate Cancel button works
# 4. Reopen the delete modal and tap on Continue: Final confirmation modal is displayed
# 5. Input the text "DElETE" and tap on DELETE ALL MY CONTENT: Data is deleted and ACCOUNT DELTED MESSAGE IS DISPLAYED
# 6. Tap on Close: Login screen is presented

# 1. Open the settings page
- runFlow: ../utils/openSettings.yaml

# 2. Tap on the delete modal: Validate Delete Account and Data is displayed
- scroll
- tapOn: |-
    Delete Account and Data
    PERMANENTLY delete your account and ALL content from Nostr relays. This cannot be undone.
- runFlow: ../asserts/assertDeleteContentModal.yaml
# 3. Tap on cancel button: Validate Cancel button works
- tapOn: Cancel

# 4. Reopen the delete modal and tap on Continue: Final confirmation modal is displayed
- tapOn: |-
    Delete Account and Data
    PERMANENTLY delete your account and ALL content from Nostr relays. This cannot be undone.
- tapOn: Continue
- runFlow: ../asserts/assertFinalConfirmationModal.yaml

# 5. Input the text "DElETE" and tap on DELETE ALL MY CONTENT: Data is deleted and ACCOUNT DELTED MESSAGE IS DISPLAYED
- tapOn: Enter your nsec...
- inputText: ${PRIV_KEY_TO_DELETE}
- runFlow: ../asserts/assertDeleteAllMyContent.yaml
- tapOn: Verify
- runFlow: ../asserts/assertAccountDeletedModal.yaml

# 6. Tap on Close: Login screen is presented
- tapOn: Close
- runFlow: ../asserts/assertLogin.yaml
